# nyx-trace-active-main-6-6

./: .env.sample  CODE_STANDARDS_ORGANIZATION_SUMMARY.md  CTAS_CODE_STANDARDS_ORGANIZATION.md  CTAS_EXECUTION_SUMMARY.md  CTAS_IMPLEMENTATION_ROADMAP.md  CTAS_ORGANIZATION_PLAN.md  CTAS_REFACTORING_PROGRESS.md  CTAS_RUST_CODE_AUDIT_REPORT.md  CTAS_RUST_CRAWLER_INTEGRATION.md  CTAS_RUST_TRANSITION_PLAN.md  Cargo.toml  README.md  REFACTORING_PLAN.md  REPO_STATUS.json  REPO_STATUS.md  RUST_CODE_AUDIT_FINAL_SUMMARY.md  STATUS_REPORT.md  TEAM_ORGANIZATION_PLAN.md  code_validation.rs  code_validation_fixed.rs  code_validation_fixed_regex.rs  ctas_code_standards_analysis.json  main.py  nyx_trace.db  requirements.txt  roles.json  run_all_fixes.py  run_all_teams.py  simple_rust_test.rs  simple_validation_report.json  team_d_roles.json  team_execution_report.json  test_nyx_trace.db  test_team_a_fixes.py  working_rust_scanner.rs
Hook_folder/: .gitignore  README.md
app/: data_handlers.py  page_router.py  streamlit_config.py
core/: configuration_manager.py  mcp_client.py  mcp_server.py  plugin_loader.py  registry.py
database/: __init__.py  config.py  database_analyzer.rs  factory.py  indexes.sql  rust_crawler_integration.py  utils.py  🧠 CTAS 6.6 In-Memory Intelligence Layer.md
file_reports/: large_files_report_20250723_020932.json  large_files_report_20250723_020932.md  large_files_report_20250723_021023.json  large_files_report_20250723_021023.md  large_files_report_20250723_021043.json  large_files_report_20250723_021043.md  large_files_report_20250723_062736.json  (+29 more)
(+191 files in other folders)
