[package]
name = "ctas_enhanced_scanner"
version = "6.6.0"
edition = "2021"
authors = ["Dr. Adelaide V. Langford <langford@ctas.gov>"]
description = "CTAS Enhanced Monorepo Scanner with Dr. Langford Integration - QuantaKnife Standards"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
regex = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "ctas-scanner"
path = "simple_rust_test.rs" 